--- a/views/initial.njk
+++ b/views/initial.njk
@@ -21,40 +21,16 @@
       <h2>Mais Acessadas</h2>
     </div>
     <div class="recipes">
-      <div class="recipes-item" id="burguer">
-        <img src="./assets/burger.png" alt="burguer">
-        <h3>Triplo bacon burguer</h3>
-        <h5>por Jorge Relato</h5>
-    </div>
-    <div class="recipes-item" id="pizza">
-      <img src="./assets/pizza.png" alt="burguer">
-      <h3>Pizza 4 estações</h3>
-      <h5>por Fabiana Melo</h5>
+      {% for item in items %}
+      <div class="recipes-item" id="{{item.id}}">
+        <img src="{{item.image}}" alt="Imagem de {{item.title}}">
+        <h3>{{item.title}}</h3>
+        <h5>{{item.author}}</h5>
+      </div>
+      {% endfor %}
     </div>
 
-    <div class="recipes-item" id="espaguete">
-      <img src="./assets/espaguete.png" alt="burguer">
-      <h3>Espaguete ao alho</h3>
-      <h5>por Júlia Kinoto</h5>
-    </div>
 
-    <div class="recipes-item" id="lasanha">
-      <img src="./assets/lasanha.png" alt="burguer">
-      <h3>Lasanha mac n’ cheese</h3>
-      <h5>por Juliano Vieira</h5>
-    </div>
-
-    <div class="recipes-item" id="doce">
-      <img src="./assets/doce.png" alt="burguer">
-      <h3>Docinhos pão-do-céu</h3>
-      <h5>por Ricardo Golvea</h5>
-    </div>
-
-    <div class="recipes-item" id="asinhas">
-      <img src="./assets/asinhas.png" alt="burguer">
-      <h3>Asinhas de frango ao barbecue</h3>
-      <h5>por Vania Steroski</h5>
-    </div>
   </section>
 
   {% endblock %}
