--- a/views/initial.njk
+++ b/views/initial.njk
@@ -22,7 +22,7 @@
     </div>
     <div class="recipes">
       {% for item in items %}
-      <div class="recipes-item" id="{{item.id}}">
+      <div class="recipes-item" id="{{item.id_recipes}}">
         <img src="{{item.image}}" alt="Imagem de {{item.title}}">
         <h3>{{item.title}}</h3>
         <h5>{{item.author}}</h5>
