--- a/public/css/style.css
+++ b/public/css/style.css
@@ -281,6 +281,34 @@ body {
   margin-top: 5px;
 }
 
+/*Receipts*/
+
+.receipts-page {
+  margin: 56px auto;
+  max-width: 940px;
+  width: 90%;
+}
+
+.receipts-item img {
+  max-width: 940px;
+  max-height: 280px;
+  margin-bottom: 50px;
+  border-radius: 15px;
+}
+
+.receipts-item h3 {
+  font-size: 36px;
+  color: #111111;
+  text-align: center;
+}
+
+.receipts-item h5 {
+  margin-top: 4px;
+  font-size: 20px;
+  color: #777777;
+  text-align: center;
+}
+
 @media (max-width: 768px) {
   html {
   font-size: 50%;
