--- a/views/recipes.njk
+++ b/views/recipes.njk
@@ -12,7 +12,7 @@
       <div class="recipes-grid">
         {% for item in items %}
         <div class="recipes-item" id="{{item.id_recipes}}">
-          <a href="/recipes/{{item.id}}">
+          <a href="/receipts/{{item.id}}">
           <img src="{{item.image}}" alt="Imagem de {{item.title}}">
           </a>
           <h3>{{item.title}}</h3>
