--- a/views/receipts.njk
+++ b/views/receipts.njk
@@ -1,8 +1,8 @@
 {% extends "layout.njk" %}
 
 {% block head %}
-  <title>Ingredientes
-    {{item.title}}
+  <title>Detalhes
+    {{recipe.title}}
     - Foodfy</title>
 {% endblock %}
 
@@ -14,33 +14,43 @@
       <img src="{{recipe.image}}" alt="Imagem de {{recipe.title}}">
       <h3>{{recipe.title}}</h3>
       <h5>{{recipe.author}}</h5>
-      <div class="show-hide">
-        <h4>Ingredientes</h4>
-        <a class="hide">ESCONDER</a>
+
+      <div class="ingredients">
+        <div class="show-hide">
+          <h4>Ingredientes</h4>
+          <a class="hide">ESCONDER</a>
+        </div>
+        <div class="text">
+          <ul>
+            {% for ingredients in recipe.ingredients %}
+              <li>{{ingredients}}</li>
+            {% endfor %}
+          </ul>
+        </div>
       </div>
-      <div class="text">
-        <ul>
-          {% for ingredients in recipe.ingredients %}
-            <li>{{ingredients}}</li>
+
+      <div class="preparation">
+        <div class="show-hide">
+          <h4>Modo de Preparo</h4>
+          <a class="hide">ESCONDER</a>
+        </div>
+        <div class="text">
+          {% for preparation in recipe.preparation %}
+            <p>{{preparation}}</p>
           {% endfor %}
-        </ul>
+        </div>
       </div>
-      <div class="show-hide">
-        <h4>Modo de Preparo</h4>
-        <a class="hide">ESCONDER</a>
+
+      <div class="information">
+        <div class="show-hide">
+          <h4>Informações Adicionais</h4>
+          <a class="hide">ESCONDER</a>
+        </div>
+        <div class="text">
+          <p>{{recipe.information | striptags(true) | escape | nl2br}}</p>
+        </div>
       </div>
-      <div class="text">
-        {% for preparation in recipe.preparation %}
-          <p>{{preparation}}</p>
-        {% endfor %}
-      </div>
-      <div class="show-hide">
-        <h4>Informações Adicionais</h4>
-        <a class="hide">ESCONDER</a>
-      </div>
-      <div class="text">
-        <p>{{recipe.information | striptags(true) | escape | nl2br}}</p>
-      </div>
+
     </div>
 
   </section>
