Refatorando Foodfy Concluido

--- a/views/layout.njk
+++ b/views/layout.njk
@@ -19,7 +19,7 @@
 
     {% block content %}{% endblock %}
 
-
+<script src="/js/nav.js"></script>
 <div class="footer">
   <p>Todos direitos reservados, receitas Foodfy.</p>
 </div>
