--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,10 @@ body {
     text-decoration: none;
 }
 
+.menu a.active{
+  font-weight: bold;
+}
+
 .chef {
     margin: auto;
     margin-top: 36px;
@@ -209,76 +213,6 @@ body {
   line-height: 2.4rem;
   padding-top: 5px;
   padding-bottom: 30px;
-}
-
-.modal-overlay {
-  background-color: rgba(0,0,0, 0.5);
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  visibility: hidden;
-  opacity: 0.6;
-}
-
-.modal {
-  background-color: #FFFFFF;
-  max-width: 660px;
-  width: 90%;
-  position: absolute;
-  border-radius: 16px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  padding: 30px;
-  margin: 0 auto;
-  visibility: hidden;
-}
-
-.modal .close-modal {
-  color: #999999;
-  font-size: 1.6rem;
-  line-height: 2.6rem;
-  margin: 0 auto;
-  margin-top: 80px;
-  display: block;
-  cursor: pointer;
-  text-align: center;
-}
-
-.modal-overlay.active {
-  opacity: 1;
-  visibility: visible;
-}
-
-.modal.active {
-  visibility: visible;
-}
-
-.modal .modal-content {
-  text-align: center;
-}
-
-.modal .modal-content img {
-  width: 100%;
-  height: 200px;
-  border-radius: 15px;
-  object-fit: cover;
-}
-
-.modal .name-recipes {
-  font-size: 2.4rem;
-  line-height: 3.4rem;
-  text-align: center;
-  margin-top: 20px;
-}
-
-.modal .author-recipes {
-  color: #777;
-  font-size: 1.8rem;
-  line-height: 2.8rem;
-  text-align: center;
-  margin-top: 5px;
 }
 
 /*Receipts*/
