--- a/public/css/style.css
+++ b/public/css/style.css
@@ -276,7 +276,7 @@ body {
 }
 
 .hide {
-  font-size: 12px;
+  font-size: 1.2rem;
   color: #999999;
 }
 
@@ -285,6 +285,86 @@ body {
   opacity: 0;
   display: none;
 }
+
+/* Admin */
+.menu-admin {
+  width: 100%;
+  margin: auto;
+  height: 78px;
+  background-color: #111111;
+}
+
+.menu-admin img {
+  margin-top: 25px;
+  margin-left: 231px;
+}
+
+.gerenciar {
+  max-width: 940px;
+  width: 90%;
+  margin: auto;
+}
+
+.gerenciar h3 {
+  margin-top: 50px;
+  font-size: 2.4rem;
+  color: #111111;
+}
+
+.card {
+  max-width: 940px;
+  width: 90%;
+  margin: 55px auto;
+}
+
+.details h3 {
+  font-size: 2.4rem;
+  color: #111111;
+  display: inline;
+}
+
+.details button {
+  background: #6558C3;
+  padding: 9px 20px;
+  border-radius: 4px;
+  border-radius: 4px;
+  font-size: 1.6rem;
+  color: #FFFFFF;
+  text-align: right;
+  float: right;
+}
+
+input {
+  width: 100%;
+  height: 49px;
+  outline: none;
+  font-size: 1.8rem;
+  border: 1px solid #DDDDDD;
+  border-radius: 4px;
+}
+
+.item{
+  margin-top: 30px;
+  font-size: 1.6rem;
+  color: #111111;
+}
+
+.item div{
+  margin-top: 10px;
+  font-size: 16px;
+  color: #111111;
+  font-weight: bold;
+}
+
+.item div button {
+  font-size: 16px;
+  color: #6558C3;
+  text-decoration: none;
+}
+
+
+
+
 
 
 
