--- a/views/admin/create.njk
+++ b/views/admin/create.njk
@@ -6,11 +6,11 @@
 
 {% block content %}
 
-  <form class="card" method="POST" action="/admin">
+  <form class="card" method="POST" action="/admin/recipes">
     <section class="details">
 
       <h3>Criando Receita</h3>
-      <button type="submit">Salvar receita</button>
+      <button class="save" type="submit">Salvar receita</button>
 
 
       {% include 'admin/fields.njk' %}
